login with styles

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,8 @@
         <h1>Bienvenidos a <b>Unicomer</b></h1>
     </section>
     <section class="LoginPage__section2">
-        contenidoww2
+        <form-login></form-login>
+        <a href="register">¿No tienes una cuenta? Registrate aquí</a>
     </section>
 
 </main>
