--- a/src/app/pages/login/molecules/login-form/login-form.component.html
+++ b/src/app/pages/login/molecules/login-form/login-form.component.html
@@ -1,1 +1,15 @@
-<p>login-form works!</p>
+<form class="LoginForm">
+    <fieldset class="LoginForm__field">
+        <label for="type-document">Tipo de documento</label>
+        <input type="text" placeholder="DNI" name="type-document" id="type-document">
+    </fieldset>
+    <fieldset class="LoginForm__field">
+        <label for="document-number">Número de documento</label>
+        <input type="text" placeholder="95022032" name="document-number" id="document-number">
+    </fieldset>
+    <fieldset class="LoginForm__field">
+        <label for="clue">Clave</label>
+        <input type="password" placeholder="*****" name="clue" id="clue">
+    </fieldset>
+    <button type="submit">Ingresar</button>
+</form>
