--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,6 +3,7 @@
         <h1>Bienvenidos a <b>Unicomer</b></h1>
     </section>
     <section class="LoginPage__section2">
+        <header class="LoginPage__section2-Header"><img src="../../../assets/unicomer.svg" alt="logo-unicomer" /></header>
         <form-login></form-login>
         <a href="register">¿No tienes una cuenta? Registrate aquí</a>
     </section>
