--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<main class="Register">
+    <header class="Register__Header">
+        <img src="../../../assets/unicomer.svg" alt="logo-unicomer" />
+        <h1>Manejar tu dinero nunca fue tan sencillo!</h1>
+    </header>
+    <form class="Register__Form">
+        <fieldset class="Register__Form-field">
+            <label for="name">Nombres</label>
+            <input type="text" placeholder="Juan ..." name="name" id="name" />
+        </fieldset>
+        <fieldset class="Register__Form-field">
+            <label for="lastname">Apellidos</label>
+            <input type="text" placeholder="Alvarez ..." name="lastname" id="lastname" />
+        </fieldset>
+        <fieldset class="Register__Form-field">
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="******" name="password" id="password" />
+        </fieldset>
+        <fieldset class="Register__Form-field">
+            <label for="repeat-password">Repita la contraseña</label>
+            <input type="password" placeholder="******" name="repeat-password" id="repeat-password" />
+        </fieldset>
+        <button>Registrar</button>
+    </form>
+</main>
