login and register with navigation and styles all set,

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ a{
     text-decoration: unset;
 }
 
-@keyframes fade-up {
+@keyframes fade-to-left {
     0%{
         transform: translateX(-30px);
         opacity: 0;
