--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,6 @@
 <main class="LoginPage">
     <section class="LoginPage__section1">
+        <a routerLink="/home">Inicio</a>
         <h1>Bienvenidos a <b>Unicomer</b></h1>
     </section>
     <section class="LoginPage__section2">
