--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,62 +1,69 @@
-@import '../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
 
-.LoginPage{
-    background-image: url("../../../assets/background-cubes.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100%;
+.LoginPage {
+  background-image: url("../../../assets/background-cubes.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  animation: fade-to-left 1s;
+
+  &__section1,
+  &__section2 {
     width: 100%;
+    min-height: 100vh;
+    max-height: 200vh;
+  }
+
+  &__section1 {
     display: flex;
-    animation: fade-up 2s;
-
-    &__section1, &__section2{
-        width: 100%;
-        min-height: 100vh;
-        max-height: 200vh;
-    } 
-
-    &__section1{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-height: 100%;
-        h1{
-            padding: .3rem;
-            display: inline;
-            font-size: 2rem;
-            font-weight: bolder;
-            color: $secondary;
-            b{
-                color: $primary;
-            }
-        }
-    }
-    &__section2{
-        background:$primary-1;
-        display: flex;
-        flex-direction: column;
-
-        justify-content: space-between;
-
-        &-Header{
-            text-align: center;
-            img{
-                width: 9rem;
-                height: auto;
-            }
-        }
-
-        a{
-            animation: fade-up 2s;
-            padding-bottom: 1rem;
-            text-align: center;
-            color: #dce8f6c8;
-            transition: color .2s;
-            &:hover{
-                color: #dce8f6;
-            }
-        }
+    justify-content: center;
+    align-items: center;
+    max-height: 100%;
+    position: relative;
+    a {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
     }
 
+    h1 {
+      padding: 0.3rem;
+      display: inline;
+      font-size: 2rem;
+      font-weight: bolder;
+      color: $secondary;
+      b {
+        color: $primary;
+      }
+    }
+  }
+  &__section2 {
+    background: $primary-1;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: space-between;
+
+    &-Header {
+      text-align: center;
+      img {
+        width: 9rem;
+        height: auto;
+      }
+    }
+
+    a {
+      animation: fade-to-left 2s;
+      padding-bottom: 1rem;
+      text-align: center;
+      color: #dce8f6c8;
+      transition: color 0.2s;
+      &:hover {
+        color: #dce8f6;
+      }
+    }
+  }
 }
