--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,25 +1,156 @@
 <main class="Register">
     <header class="Register__Header">
+        <a routerLink="/home">Volver</a>
         <img src="../../../assets/unicomer.svg" alt="logo-unicomer" />
         <h1>Manejar tu dinero nunca fue tan sencillo!</h1>
     </header>
-    <form class="Register__Form">
+
+    <form [formGroup]="registerForm" class="Register__Form" (ngSubmit)="onSubmit()">
+        <h2 class="Register__Form-title">Registrate</h2>
         <fieldset class="Register__Form-field">
             <label for="name">Nombres</label>
-            <input type="text" placeholder="Juan ..." name="name" id="name" />
+            <input type="text" placeholder="Juan ..." name="name" id="name" formControlName="name" />
+            @if (registerForm.get('name')?.touched &&
+            registerForm.get('name')?.errors){
+
+            <ul class="Register__Form-field-Errors">
+                <li *ngIf="registerForm.get('name')?.errors?.['required']" class="Register__Form-field-Errors-error">
+                    Este campo es requerido
+                </li>
+                <li *ngIf="registerForm.get('name')?.errors?.['pattern']" class="Register__Form-field-Errors-error">
+                    El nombre solo debe contener letras
+                </li>
+            </ul>
+            }
         </fieldset>
+        
         <fieldset class="Register__Form-field">
             <label for="lastname">Apellidos</label>
-            <input type="text" placeholder="Alvarez ..." name="lastname" id="lastname" />
+            <input type="text" placeholder="Alvarez ..." name="lastname" id="lastname" formControlName="lastname" />
+
+            @if (registerForm.get('lastname')?.touched &&
+            registerForm.get('lastname')?.errors) {
+            <ul class="Register__Form-field-Errors">
+                <li *ngIf="registerForm.get('lastname')?.errors?.['required']"
+                    class="Register__Form-field-Errors-error">
+                    Este campo es requerido
+                </li>
+                <li *ngIf="registerForm.get('lastname')?.errors?.['pattern']" class="Register__Form-field-Errors-error">
+                    El apellido solo debe contener letras
+                </li>
+            </ul>
+            }
         </fieldset>
+
         <fieldset class="Register__Form-field">
-            <label for="password">Contraseña</label>
-            <input type="password" placeholder="******" name="password" id="password" />
+            <label for="email">Correo Electrónico</label>
+            <input type="text" placeholder="correo@example.com" name="email" id="email" formControlName="email" />
+
+            @if (registerForm.get('email')?.touched &&
+            registerForm.get('email')?.errors) {
+                <ul class="Register__Form-field-Errors">
+                    <li *ngIf="registerForm.get('email')?.errors?.['required']"
+                        class="Register__Form-field-Errors-error">
+                        Este campo es requerido
+                    </li>
+                    <li *ngIf="registerForm.get('email')?.errors?.['email']"
+                        class="Register__Form-field-Errors-error">
+                        Ingresa un correo electrónico válido
+                    </li>
+                </ul>
+            }
         </fieldset>
+
         <fieldset class="Register__Form-field">
-            <label for="repeat-password">Repita la contraseña</label>
-            <input type="password" placeholder="******" name="repeat-password" id="repeat-password" />
+            <label for="type_document">Tipo de documento</label>
+            <input type="text" placeholder="DNI / Pasaporte" name="type_document" id="type_document"
+                formControlName="type_document" />
+            @if (registerForm.get('type_document')?.touched &&
+            registerForm.get('type_document')?.errors) {
+            <ul class="Register__Form-field-Errors">
+                <li *ngIf="registerForm.get('type_document')?.errors?.['required']"
+                    class="Register__Form-field-Errors-error">
+                    Este campo es requerido
+                </li>
+                <li *ngIf="(registerForm.get('type_document')?.errors?.['minlength'])"
+                    class="Register__Form-field-Errors-error">
+                    El tipo de documento debe tener un mínimo de
+                    {{registerForm.get('type_document')?.errors?.['minlength'].requiredLength}}
+                </li>
+                <li *ngIf="(registerForm.get('type_document')?.errors?.['maxlength'])">
+                    El tipo de documento debe tener un máximo de
+                    {{registerForm.get('type_document')?.errors?.['maxlength'].requiredLength}}
+                </li>
+                <li *ngIf="(registerForm.get('type_document')?.errors?.['pattern'])"
+                    class="Register__Form-field-Errors-error">
+                    El tipo de documento debe ser DNI o Pasaporte
+                </li>
+            </ul>
+            }
         </fieldset>
-        <button>Registrar</button>
+
+        <fieldset class="Register__Form-field">
+            <label for="document_number">Número de documento</label>
+            <input type="text" placeholder="95022032" name="document_number" id="document_number"
+                formControlName="document_number" />
+            @if (registerForm.get('document_number')?.touched &&
+            registerForm.get('document_number')?.errors) {
+            <ul class="Register__Form-field-Errors">
+                <li *ngIf="registerForm.get('document_number')?.errors?.['required']"
+                    class="Register__Form-field-Errors-error">
+                    Este campo es requerido
+                </li>
+                <li *ngIf="registerForm.get('document_number')?.errors?.['minlength']"
+                    class="Register__Form-field-Errors-error">
+                    El número de documento debe tener un mínimo de
+                    {{ registerForm.get('document_number')?.errors?.['minlength'].requiredLength }}
+                    caracteres
+                </li>
+                <li *ngIf="registerForm.get('document_number')?.errors?.['maxlength']"
+                    class="Register__Form-field-Errors-error">
+                    El número de documento debe tener un máximo de
+                    {{ registerForm.get('document_number')?.errors?.['maxlength'].requiredLength }}
+                    caracteres
+                </li>
+                <li *ngIf="registerForm.get('document_number')?.errors?.['pattern']"
+                    class="Register__Form-field-Errors-error">
+                    El número de documento debe contener solo dígitos
+                </li>
+            </ul>
+            }
+        </fieldset>
+
+        <fieldset class="Register__Form-field">
+            <label for="clue">Clave</label>
+            <input type="password" placeholder="**********" name="clue" id="clue" formControlName="clue" />
+
+            @if (registerForm.get('clue')?.touched &&
+            registerForm.get('clue')?.errors) {
+            <ul class="Register__Form-field-Errors">
+                <li *ngIf="registerForm.get('clue')?.errors?.['required']"
+            class="Register__Form-field-Errors-error">
+            Este campo es requerido
+        </li>
+        <li *ngIf="registerForm.get('clue')?.errors?.['minlength']"
+            class="Register__Form-field-Errors-error">
+            La clave debe tener un mínimo de
+            {{ registerForm.get('clue')?.errors?.['minlength'].requiredLength }}
+            caracteres
+        </li>
+        <li *ngIf="registerForm.get('clue')?.errors?.['maxlength']"
+            class="Register__Form-field-Errors-error">
+            La clave debe tener un máximo de
+            {{ registerForm.get('clue')?.errors?.['maxlength'].requiredLength }}
+            caracteres
+        </li>
+        <li *ngIf="registerForm.get('clue')?.errors?.['pattern']"
+            class="Register__Form-field-Errors-error">
+            La clave debe contener al menos una letra minúscula, una letra mayúscula, un dígito y un carácter especial: {{"@-$-!-%-*-?-&"}}
+        </li>
+            </ul>
+            }
+        </fieldset>
+        
+        <button type="submit" [disabled]="registerForm.invalid" >Registrar</button>
     </form>
 </main>
