--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -6,12 +6,24 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    animation: fade-to-left 1s;
+    position: relative;
+
+    
 
     &__Header {
         text-align: center;
+        position: relative;
+
+        a {
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+        }
 
         img {
             height: auto;
@@ -30,16 +42,37 @@
         width: 90%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
         gap: 2rem;
         align-items: center;
-
+        &-title{
+            width: 67%;
+            color: $white-1;
+        }
         &-field {
             @include fieldInput();
+            &-Errors{
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                gap: .3rem;
+                align-items: center;
+                background: $white-1;
+                margin-top: .5rem;
+                border-radius: .5rem;
+                padding: .6rem;
+                li{
+                    margin: 0;
+                    border-radius: .5rem;
+                    text-wrap: balance;
+                    color: $danger;
+                    width: 70%;
+                }
+            }
         }
         button{
             @include buttonForm();
-
+            margin-bottom: 3rem;
         }
     }
 }
