--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,1 @@
-@for (item of routes; track $index) {
-    @if (!item.path?.includes("**")) {
-        <a class="link" style="margin: 3rem;display: block;" routerLink="/{{item?.path}}">{{item.path}}</a>
-    }
-}
+<app-sidebar/>
