--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
     <section class="LoginPage__section2">
         <header class="LoginPage__section2-Header"><img src="../../../assets/unicomer.svg" alt="logo-unicomer" /></header>
         <form-login (form)="login($event)" ></form-login>
-        <a href="register">¿No tienes una cuenta? Registrate aquí</a>
+        <a routerLink="/register">¿No tienes una cuenta? Registrate aquí</a>
     </section>
 
 </main>
