--- a/src/app/pages/dashboard/view/principal/atoms/card/card.component.html
+++ b/src/app/pages/dashboard/view/principal/atoms/card/card.component.html
@@ -1,1 +1,29 @@
-<p>card works!</p>
+<div class="Card">
+  <div class="Card__balance">
+    <span>Mi saldo</span>
+    <h2>$12,345,789</h2>
+  </div>
+
+  <div class="Card__number">
+    <h3>**** **** **** 1234</h3>
+  </div>
+
+  <div class="Card__Data">
+    <div class="Card__Data-headline">
+      <span>Propietario</span>
+      <h3>Angel Bryan Luis Roman</h3>
+    </div>
+    <div class="Card__Data-due">
+      <span>Vencimiento</span>
+      <h3>03/21</h3>
+    </div>
+  </div>
+
+  <div class="Card__bar-1"></div>
+  <div class="Card__bar-2"></div>
+
+  <div class="Card__circle">
+    <div class="Card__circle-1"></div>
+    <div class="Card__circle-2"></div>
+  </div>
+</div>
