--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<main style="display: flex; gap: 2.5rem;">
-    <app-sidebar/>
+<main style="display: flex; max-width: 100vw; animation: fade-to-left .5s; gap: 1rem;">
+    <app-sidebar />
     <router-outlet/>
 </main>
