--- a/src/app/pages/dashboard/view/principal/principal.component.html
+++ b/src/app/pages/dashboard/view/principal/principal.component.html
@@ -13,18 +13,58 @@
     />
     }
     <app-chart
-      [chartWidth]="'386'"
-      [chartHeight]="'331'"
-      [chartType]="'spline'"
-      [chartDataFormat]="'json'"
-      [chartDataSource]="chartData"
+    [chartTitle]="'holi'"
+    [transactionsData]="[
+    { amount: 1794, date: '2023-12-06' },
+    { amount: 1167, date: '2023-12-07' },
+    { amount: 1275, date: '2023-12-08' },
+    { amount: 1220, date: '2023-12-09' },
+    { amount: 1698, date: '2023-12-10' },
+    { amount: 387, date: '2023-12-11' },
+    { amount: 1574, date: '2023-12-12' },
+    { amount: 1565, date: '2023-12-13' },
+    { amount: 488, date: '2023-12-14' },
+    { amount: 694, date: '2023-12-15' },
+    { amount: 1862, date: '2023-12-16' },
+    { amount: 1262, date: '2023-12-17' },
+    { amount: 1375, date: '2023-12-18' },
+    { amount: 1809, date: '2023-12-19' },
+    { amount: 1088, date: '2023-12-20' },
+    { amount: 942, date: '2023-12-21' },
+    { amount: 1778, date: '2023-12-22' },
+    { amount: 773, date: '2023-12-23' },
+    { amount: 1629, date: '2023-12-24' },
+    { amount: 1785, date: '2023-12-25' }
+  ]
+  
+  "
     />
     <app-chart
-      [chartWidth]="'386'"
-      [chartHeight]="'331'"
-      [chartType]="'spline'"
-      [chartDataFormat]="'json'"
-      [chartDataSource]="chartData"
+    [chartTitle]="'holi'"
+    [transactionsData]="[
+    { amount: 1794, date: '2023-12-06' },
+    { amount: 1167, date: '2023-12-07' },
+    { amount: 1275, date: '2023-12-08' },
+    { amount: 1220, date: '2023-12-09' },
+    { amount: 1698, date: '2023-12-10' },
+    { amount: 387, date: '2023-12-11' },
+    { amount: 1574, date: '2023-12-12' },
+    { amount: 1565, date: '2023-12-13' },
+    { amount: 488, date: '2023-12-14' },
+    { amount: 694, date: '2023-12-15' },
+    { amount: 1862, date: '2023-12-16' },
+    { amount: 1262, date: '2023-12-17' },
+    { amount: 1375, date: '2023-12-18' },
+    { amount: 1809, date: '2023-12-19' },
+    { amount: 1088, date: '2023-12-20' },
+    { amount: 942, date: '2023-12-21' },
+    { amount: 1778, date: '2023-12-22' },
+    { amount: 773, date: '2023-12-23' },
+    { amount: 1629, date: '2023-12-24' },
+    { amount: 1785, date: '2023-12-25' }
+  ]
+  
+  "
     />
   </section>
 </section>
