--- a/src/app/pages/dashboard/view/principal/atoms/card/card.component.html
+++ b/src/app/pages/dashboard/view/principal/atoms/card/card.component.html
@@ -7,7 +7,7 @@
   <div class="Card__number">
     <h3>{{ numberCard }}</h3>
   </div>
-  @if(!numberCard){
+  @if(!dueDate){
   <p>Aún no tienes tarjetas registradas</p>
   }
   <div class="Card__Data">
