--- a/src/app/pages/dashboard/view/cards/form-card/form-card.component.scss
+++ b/src/app/pages/dashboard/view/cards/form-card/form-card.component.scss
@@ -5,6 +5,8 @@
 }
 
   .CardForm {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     background: $primary-1;
     min-width: 30vw;
     max-width: 60vw;
@@ -13,6 +15,7 @@
     align-items: center;
     justify-content: space-around;
     gap: 2rem;
+    animation: fade-to-left .2s;
     align-items: center;
     &-title {
       width: 67%;
